# ferrum-framework

./: Cargo.toml
src/: lib.rs
src/auth/: mod.rs
src/db/: get_pool.rs  init_pool.rs  mod.rs
src/error/: mod.rs
src/response/: api_response.rs  mod.rs
src/types/auth/: auth_user.rs  mod.rs
src/types/utils/: jwt_util.rs
src/utils/: jwt_util.rs  mod.rs
src/validation/: mod.rs
