[package]
name = "ferrum"
version = "0.4.1"
edition = "2024"
authors = ["Shan Padayhag <shanpadayhag@gmail.com>"]
description = "A simple crate for ferrum projects"
repository = "https://github.com/nexora-inc/ferrum-framework"
license = "MIT"

[dependencies]
chrono = { version = "0.4.40", features = [ "serde" ] }
jsonwebtoken = "9.3.1"
lambda_http = "0.14.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "postgres", "uuid", "migrate", "macros", "runtime-tokio", "chrono" ] }
uuid = { version = "1.15.1", features = [ "v4", "serde" ] }

[dev-dependencies]
mockall = "0.13.1"
